--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.11",
+    "word2vec": "^1.1.2",
     "wordnet": "^0.1.2"
   }
 }
