--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon server/index.js"
+    "start-dev": "webpack -w & nodemon server/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,7 +22,21 @@
     "express": "^4.16.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.14.11",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "word2vec": "^1.1.2",
     "wordnet": "^0.1.2"
+  },
+  "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.10.0"
   }
 }
