--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "semantic-ui-react": "^0.77.2",
     "word2vec": "^1.1.2",
     "wordnet": "^0.1.2"
   },
