--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build-client-watch": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-dev": "nodemon server/index.js",
-    "go-dev": "NODE_ENV='development' npm run build-client-watch & nodemon server/forker.js"
+    "go-dev": "NODE_ENV='development' npm run build-client-watch & node server/forker.js"
   },
   "repository": {
     "type": "git",
