--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "react": "^16.2.0",
     "react-d3-graph": "^1.0.0",
     "react-dom": "^16.2.0",
+    "react-grid-system": "^3.1.2",
     "react-particles-js": "^2.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "semantic-ui-react": "^0.77.2",
     "word2vec": "^1.1.2",
     "wordnet": "^0.1.2"
   },
