--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "wordnet": "^0.1.2"
   },
   "devDependencies": {
-    "chalk": "^2.3.0",
-    "require-reload": "^0.2.2",
-    "watch": "^1.0.2",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "chalk": "^2.3.0",
+    "pg": "^6.4.1",
+    "require-reload": "^0.2.2",
+    "sequelize": "^4.32.2",
+    "watch": "^1.0.2",
     "webpack": "^3.10.0"
   }
 }
