--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.3.0",
+    "inquirer": "^5.0.1",
     "pg": "^6.4.1",
     "require-reload": "^0.2.2",
     "sequelize": "^4.32.2",
