--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "chalk": "^2.3.0",
     "inquirer": "^5.0.1",
     "pg": "^6.4.1",
+    "pluralize": "^7.0.0",
     "require-reload": "^0.2.2",
     "sequelize": "^4.32.2",
     "watch": "^1.0.2",
