--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     "babel-preset-react": "^6.24.1",
     "chalk": "^2.3.0",
     "compromise": "^11.2.3",
+    "compute-covariance": "^1.0.1",
+    "eig": "^1.0.2",
     "inquirer": "^5.0.1",
+    "mathjs": "^3.20.1",
     "ml-pca": "^2.1.0",
     "pg": "^6.4.1",
     "pluralize": "^7.0.0",
