--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "ml-pca": "^2.1.0",
     "pg": "^6.4.1",
     "pluralize": "^7.0.0",
+    "react-d3-basic": "^1.6.11",
+    "react-d3-core": "^1.3.9",
     "require-reload": "^0.2.2",
     "sequelize": "^4.32.2",
     "watch": "^1.0.2",
